--- a/templates/index.html
+++ b/templates/index.html
@@ -32,11 +32,11 @@
 				<span style="font-weight: 800;">d) Anyone can use it.</span>
 				</p>
 				<footer>
-					<a class="button style2 scrolly">FacTract now!</a>
+					<a class="style2 scrolly">FacTract now!</a>
 				</footer>
 			</section>
 
-			<div id="loading" ></div>
+			<!-- <div id="loading" ></div> -->
 
 		<!-- Form -->
 			<article class="container box style3">
@@ -49,7 +49,7 @@
 						<div class="col-12 col-12-mobile"><input type="text" class="text" name="user_input" placeholder="Enter FacTract word here" /></div>
 						<div class="col-12">
 							<ul class="actions">
-								<li><input type="submit" onclick = "loading()" value="FacTract!" /></li>
+								<li><input type="submit" value="FacTract!" /></li>
 							</ul>
 						</div>
 					</div>
@@ -57,23 +57,23 @@
 			</article>
 		<section id="footer">
 			<ul class="icons">
-				<li><h4>About Us</h4></li>
+				<li><h4>FacTract</h4></li>
 			</ul>
 			<div class="copyright">
 				<ul class="menu">
-					<span class="label"><li>&copy; Team Pied Piper. All rights reserved.</li><li>Design: Satyam Mishra</li></span>
+					<span class="label"><li>&copy; Team Pied Piper. All rights reserved.</li><li>Design: Pied Piper</li></span>
 				</ul>
 			</div>
 		</section>
 
 		<!-- Scripts -->
-		<script type="text/javascript">
+		<!-- <script type="text/javascript">
 			function loading(){
 				$("#loading").show();
 				$("#content").hide();
 			}
 		</script>
-			<script src="static/js/jquery.min.js"></script>
+	 -->		<script src="static/js/jquery.min.js"></script>
 			<script src="static/js/jquery.scrolly.min.js"></script>
 			<script src="static/js/jquery.poptrox.min.js"></script>
 			<script src="static/js/browser.min.js"></script>
