--- a/static/css/fact.css
+++ b/static/css/fact.css
@@ -1,11 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,300,200");
 
-/*
-	Halcyonic by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-*/
-
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
 pre, a, abbr, acronym, address, big, cite,
@@ -115,6 +109,7 @@ input, select, textarea {
 	.last-child {
 		margin-bottom: 0 !important;
 	}
+
 
 /* Container */
 
@@ -1610,7 +1605,7 @@ input, select, textarea {
 	}
 
 		#content section {
-			background: #fff;
+			background: palegreen;
 			padding: 40px 30px 45px 30px;
 			box-shadow: 2px 2px 2px 1px rgba(128, 128, 128, 0.1);
 			margin: 0 0 25px 0;
