--- a/static/css/fact.css
+++ b/static/css/fact.css
@@ -1599,16 +1599,20 @@ input, select, textarea {
 /* Content */
 
 	#content {
-		background-color: #91ab9f;
+		background-image:url('./static/piper.png');
+    	background-attachment:fixed;
+    	background-repeat: no-repeat;
+    	background-size: cover;
 		border-top: solid 1px #fff;
 		padding: 45px 0 45px 0;
 	}
 
 		#content section {
-			background: palegreen;
+			background-color: #aed581;
 			padding: 40px 30px 45px 30px;
 			box-shadow: 2px 2px 2px 1px rgba(128, 128, 128, 0.1);
 			margin: 0 0 25px 0;
+			border-radius: 2%;
 		}
 
 		#content h2 {
