--- a/templates/image.html
+++ b/templates/image.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>FacTract</title>
+  <title>Graphacts (FacTract)</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -42,7 +42,7 @@
 <div class="row">
 <div class="col-md-12">
 	<div class="footer-factract" style="background-color: rgba(0,0,0,.7);padding: 30px; color: white; text-align: center; font-size: 30px; margin-top: 20px;">
-		<p style="font-family: 'Just Me Again Down Here', cursive;">Made By : Pied Piper | FacTract</p>
+		<p style="font-family: 'Just Me Again Down Here', cursive;">Made By : Pied Piper - FacTract</p>
 	</div>
 </div>
 </div>
